--- a/direct_problem/equations/firn_pinn.ipynb
+++ b/direct_problem/equations/firn_pinn.ipynb
@@ -104,16 +104,12 @@
    "execution_count": 18
   },
   {
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-01-03T13:35:01.067257Z",
-     "start_time": "2025-01-03T13:35:00.932072Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "class FirnFPINN:\n",
+    "class FirnDPINN:\n",
     "    def __init__(self, n_int, n_sb, n_tb, lambda_u=10, n_hidden_layers=4, neurons=20, retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
     "\n",
     "        self.device = device\n",
@@ -134,14 +130,14 @@
     "        space_domain = [0, 1]\n",
     "        self.Te = time_domain[1]\n",
     "        self.zf = space_domain[1]\n",
-    "        self.domain_extrema = torch.tensor([time_domain, space_domain])\n",
+    "        self.domain = torch.tensor([time_domain, space_domain])\n",
     "\n",
     "        # Parameter to balance the role of data and PDE\n",
     "        self.lambda_u = lambda_u\n",
     "        # Generator of Sobol sequences\n",
-    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain_extrema.shape[0])\n",
+    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain.shape[0])\n",
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
-    "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_solution = NeuralNet(input_dimension=self.domain.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
@@ -153,8 +149,8 @@
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
-    "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
-    "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "        assert (tens.shape[1] == self.domain.shape[0])\n",
+    "        return tens * (self.domain[:, 1] - self.domain[:, 0]) + self.domain[:, 0]\n",
     "\n",
     "    def save_config(self, optimizer):\n",
     "        class_config = {\n",
@@ -219,7 +215,7 @@
     "    ###############################################################################################\n",
     "    # add points\n",
     "    def add_temporal_boundary_points(self):\n",
-    "        t0 = self.domain_extrema[0, 0]\n",
+    "        t0 = self.domain[0, 0]\n",
     "        input_tb = self.convert(self.soboleng.draw(self.n_tb))\n",
     "        input_tb = input_tb.to(self.dtype).to(self.device)\n",
     "        input_tb[:, 0] = torch.full(input_tb[:, 0].shape, t0)\n",
@@ -228,7 +224,7 @@
     "        return input_tb, output_tb\n",
     "\n",
     "    def add_spatial_boundary_points_left(self):\n",
-    "        x_left = self.domain_extrema[1, 0]\n",
+    "        x_left = self.domain[1, 0]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_left = torch.clone(input_sb)\n",
@@ -239,7 +235,7 @@
     "        return input_sb_left, output_sb_left\n",
     "\n",
     "    def add_spatial_boundary_points_right(self):\n",
-    "        x_right = self.domain_extrema[1, 1]\n",
+    "        x_right = self.domain[1, 1]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_right = torch.clone(input_sb)\n",
@@ -522,9 +518,7 @@
     "        plt.savefig(f'{self.path}/train_loss.png')\n",
     "        plt.show()\n"
    ],
-   "id": "initial_id",
-   "outputs": [],
-   "execution_count": 19
+   "id": "49c39eca185256ad"
   },
   {
    "metadata": {},
@@ -553,7 +547,7 @@
     "    scheduler_factor=0.5,\n",
     "    scheduler_min_lr=1e-7\n",
     ")\n",
-    "pde = FirnFPINN(n_int=1024, n_sb=512, n_tb=512, n_hidden_layers=8, neurons=64)"
+    "pde = FirnDPINN(n_int=1024, n_sb=512, n_tb=512, n_hidden_layers=8, neurons=64)"
    ],
    "id": "ebac1aa33589d48c",
    "outputs": [],
