--- a/inverse_problem/equations/transport_pinn.ipynb
+++ b/inverse_problem/equations/transport_pinn.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "        # Extrema of the solution domain (t,x)\n",
     "        time_domain, space_domain = [0, 0.1], [-1, 1]\n",
-    "        self.domain_extrema = torch.tensor([time_domain, space_domain])\n",
+    "        self.domain = torch.tensor([time_domain, space_domain])\n",
     "\n",
     "        # Parameter to balance the role of data and PDE\n",
     "        self.lambda_u = lambda_u\n",
@@ -60,11 +60,11 @@
     "        self.lambda_m = lambda_m\n",
     "\n",
     "        # Generator of Sobol sequences\n",
-    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain_extrema.shape[0])\n",
+    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain.shape[0])\n",
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
-    "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_solution = NeuralNet(input_dimension=self.domain.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
-    "        self.approximate_coefficient = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers_cf, neurons=neurons_cf, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_coefficient = NeuralNet(input_dimension=self.domain.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers_cf, neurons=neurons_cf, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        # Create directory to save plots\n",
@@ -75,8 +75,8 @@
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
-    "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
-    "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "        assert (tens.shape[1] == self.domain.shape[0])\n",
+    "        return tens * (self.domain[:, 1] - self.domain[:, 0]) + self.domain[:, 0]\n",
     "\n",
     "    def save_config(self, optimizer):\n",
     "        class_config = {\n",
@@ -107,11 +107,11 @@
     "        return torch.exp(-torch.square(x))\n",
     "\n",
     "    def right_boundary_condition(self, t):\n",
-    "        x_right = self.domain_extrema[1, 1]\n",
+    "        x_right = self.domain[1, 1]\n",
     "        return torch.exp(-(x_right**2)/(1 + 2 * t))\n",
     "\n",
     "    def left_boundary_condition(self, t):\n",
-    "        x_left = self.domain_extrema[1, 0]\n",
+    "        x_left = self.domain[1, 0]\n",
     "        return torch.exp(-(x_left**2)/(1 + 2 * t))\n",
     "\n",
     "    def exact_coefficient(self, inputs):\n",
@@ -131,7 +131,7 @@
     "    ###############################################################################################\n",
     "    # add points\n",
     "    def add_temporal_boundary_points(self):\n",
-    "        t0 = self.domain_extrema[0, 0]\n",
+    "        t0 = self.domain[0, 0]\n",
     "        input_tb = self.convert(self.soboleng.draw(self.n_tb))\n",
     "        input_tb = input_tb.to(self.dtype).to(self.device)\n",
     "        input_tb[:, 0] = torch.full(input_tb[:, 0].shape, t0)\n",
@@ -140,7 +140,7 @@
     "        return input_tb, output_tb\n",
     "\n",
     "    def add_spatial_boundary_points_left(self):\n",
-    "        x_left = self.domain_extrema[1, 0]\n",
+    "        x_left = self.domain[1, 0]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_left = torch.clone(input_sb)\n",
@@ -151,7 +151,7 @@
     "        return input_sb_left, output_sb_left\n",
     "\n",
     "    def add_spatial_boundary_points_right(self):\n",
-    "        x_right = self.domain_extrema[1, 1]\n",
+    "        x_right = self.domain[1, 1]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_right = torch.clone(input_sb)\n",
@@ -174,8 +174,8 @@
     "\n",
     "    def get_measurement_data(self):\n",
     "        torch.random.manual_seed(42)\n",
-    "        t = torch.linspace(self.domain_extrema[0, 0], self.domain_extrema[0, 1], self.n_meas)\n",
-    "        x = torch.linspace(self.domain_extrema[1, 0], self.domain_extrema[1, 1], self.n_meas)\n",
+    "        t = torch.linspace(self.domain[0, 0], self.domain[0, 1], self.n_meas)\n",
+    "        x = torch.linspace(self.domain[1, 0], self.domain[1, 1], self.n_meas)\n",
     "        input_meas = torch.cartesian_prod(t, x)\n",
     "        input_meas = input_meas.to(self.dtype).to(self.device)\n",
     "        output_meas = self.exact_solution(input_meas).reshape(-1,1)\n",
