--- a/direct_problem/equations/heat_pinn.ipynb
+++ b/direct_problem/equations/heat_pinn.ipynb
@@ -28,16 +28,12 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-01-05T12:14:20.554402Z",
-     "start_time": "2025-01-03T09:14:19.473299Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "class HeatFPINN:\n",
+    "class HeatDPINN:\n",
     "    def __init__(self, n_int, n_sb, n_tb, lambda_u=10, n_hidden_layers=4, neurons=20, retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
     "\n",
     "        self.device = device\n",
@@ -46,18 +42,17 @@
     "        self.n_int = n_int\n",
     "        self.n_sb = n_sb\n",
     "        self.n_tb = n_tb\n",
-    "\n",
     "        # Extrema of the solution domain (t,x)\n",
     "        time_domain = [0, 1]\n",
     "        space_domain = [0, 1]\n",
-    "        self.domain_extrema = torch.tensor([time_domain, space_domain])\n",
+    "        self.domain = torch.tensor([time_domain, space_domain])\n",
     "\n",
     "        # Parameter to balance the role of data and PDE\n",
     "        self.lambda_u = lambda_u\n",
     "        # Generator of Sobol sequences\n",
-    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain_extrema.shape[0])\n",
+    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain.shape[0])\n",
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
-    "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_solution = NeuralNet(input_dimension=self.domain.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        # Create directory to save plots\n",
@@ -68,8 +63,8 @@
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
-    "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
-    "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "        assert (tens.shape[1] == self.domain.shape[0])\n",
+    "        return tens * (self.domain[:, 1] - self.domain[:, 0]) + self.domain[:, 0]\n",
     "\n",
     "    def save_config(self, optimizer):\n",
     "        class_config = {\n",
@@ -116,7 +111,7 @@
     "    ###############################################################################################\n",
     "    # add points\n",
     "    def add_temporal_boundary_points(self):\n",
-    "        t0 = self.domain_extrema[0, 0]\n",
+    "        t0 = self.domain[0, 0]\n",
     "        input_tb = self.convert(self.soboleng.draw(self.n_tb))\n",
     "        input_tb = input_tb.to(self.dtype).to(self.device)\n",
     "        input_tb[:, 0] = torch.full(input_tb[:, 0].shape, t0)\n",
@@ -125,7 +120,7 @@
     "        return input_tb, output_tb\n",
     "\n",
     "    def add_spatial_boundary_points_left(self):\n",
-    "        x_left = self.domain_extrema[1, 0]\n",
+    "        x_left = self.domain[1, 0]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_left = torch.clone(input_sb)\n",
@@ -136,7 +131,7 @@
     "        return input_sb_left, output_sb_left\n",
     "\n",
     "    def add_spatial_boundary_points_right(self):\n",
-    "        x_right = self.domain_extrema[1, 1]\n",
+    "        x_right = self.domain[1, 1]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_right = torch.clone(input_sb)\n",
@@ -415,9 +410,7 @@
     "        plt.savefig(f'{self.path}/train_loss.png')\n",
     "        plt.show()"
    ],
-   "id": "initial_id",
-   "outputs": [],
-   "execution_count": 2
+   "id": "88957f4e56f6999f"
   },
   {
    "metadata": {},
@@ -439,7 +432,7 @@
     "    early_stopping_patience=20,\n",
     "    max_iter=25,\n",
     ")\n",
-    "pde = HeatFPINN(n_int=256, n_sb=64, n_tb=64)"
+    "pde = HeatDPINN(n_int=256, n_sb=64, n_tb=64)"
    ],
    "id": "ebac1aa33589d48c",
    "outputs": [],
