--- a/direct_problem/forward_pinn.ipynb
+++ b/direct_problem/forward_pinn.ipynb
@@ -30,26 +30,27 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "class ForwardPINN(ABC):\n",
+    "class DirectPINN(ABC):\n",
     "    def __init__(self, n_int, n_sb, n_tb, lambda_u=10, n_hidden_layers=4, neurons=20, retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
     "\n",
     "        self.device = device\n",
     "        self.dtype = torch.float32\n",
     "\n",
+    "        # Number of training points for the interior, spatial boundary and temporal boundary\n",
     "        self.n_int = n_int\n",
     "        self.n_sb = n_sb\n",
     "        self.n_tb = n_tb\n",
     "\n",
     "        # Extrema of the solution domain (t,x)\n",
     "        time_domain, space_domain = [0, 1], [0, 1]\n",
-    "        self.domain_extrema = torch.tensor([time_domain, space_domain])\n",
+    "        self.domain = torch.tensor([time_domain, space_domain])\n",
     "\n",
     "        # Parameter to balance the role of data and PDE\n",
     "        self.lambda_u = lambda_u\n",
     "        # Generator of Sobol sequences\n",
-    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain_extrema.shape[0])\n",
+    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain.shape[0])\n",
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
-    "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_solution = NeuralNet(input_dimension=self.domain.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "\n",
@@ -61,8 +62,8 @@
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
-    "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
-    "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "        assert (tens.shape[1] == self.domain.shape[0])\n",
+    "        return tens * (self.domain[:, 1] - self.domain[:, 0]) + self.domain[:, 0]\n",
     "\n",
     "    def save_config(self, optimizer):\n",
     "        class_config = {\n",
@@ -79,6 +80,8 @@
     "        # Save configuration in json file\n",
     "        with open(f'{self.path}/config.json', 'w') as f:\n",
     "            json.dump(class_config, f)\n",
+    "\n",
+    "    # PDE specific functions\n",
     "\n",
     "    @abstractmethod\n",
     "    def initial_condition(self, x):\n",
@@ -101,9 +104,11 @@
     "        pass\n",
     "\n",
     "    ###############################################################################################\n",
+    "    #### Add training points and create datasets\n",
+    "    ###############################################################################################\n",
     "    # add points\n",
     "    def add_temporal_boundary_points(self):\n",
-    "        t0 = self.domain_extrema[0, 0]\n",
+    "        t0 = self.domain[0, 0]\n",
     "        input_tb = self.convert(self.soboleng.draw(self.n_tb))\n",
     "        input_tb = input_tb.to(self.dtype).to(self.device)\n",
     "        input_tb[:, 0] = torch.full(input_tb[:, 0].shape, t0)\n",
@@ -112,7 +117,7 @@
     "        return input_tb, output_tb\n",
     "\n",
     "    def add_spatial_boundary_points_left(self):\n",
-    "        x_left = self.domain_extrema[1, 0]\n",
+    "        x_left = self.domain[1, 0]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_left = torch.clone(input_sb)\n",
@@ -123,7 +128,7 @@
     "        return input_sb_left, output_sb_left\n",
     "\n",
     "    def add_spatial_boundary_points_right(self):\n",
-    "        x_right = self.domain_extrema[1, 1]\n",
+    "        x_right = self.domain[1, 1]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_right = torch.clone(input_sb)\n",
@@ -135,7 +140,6 @@
     "        return input_sb_right, output_sb_right\n",
     "\n",
     "\n",
-    "    #  Function returning the input-output tensor required to assemble the training set S_int corresponding to the interior domain where the PDE is enforced\n",
     "    def add_interior_points(self):\n",
     "        input_int = self.convert(self.soboleng.draw(self.n_int))\n",
     "        input_int = input_int.to(self.dtype).to(self.device)\n",
@@ -144,7 +148,7 @@
     "        return input_int, output_int\n",
     "\n",
     "\n",
-    "    # Function returning the training sets S_sb, S_tb, S_int as dataloader\n",
+    "    # Function returning the training sets\n",
     "    def assemble_datasets(self):\n",
     "        input_sb_left, output_sb_left = self.add_spatial_boundary_points_left()\n",
     "        input_sb_right, output_sb_right = self.add_spatial_boundary_points_right()\n",
@@ -174,6 +178,8 @@
     "        return u_pred_sb\n",
     "\n",
     "    ################################################################################################\n",
+    "    ###### define the optimizers and compute the loss\n",
+    "    ################################################################################################\n",
     "    def optimizer_LBFGS(self, config):\n",
     "        \"\"\"Create LBFGS optimizer with specified configuration.\"\"\"\n",
     "        return torch.optim.LBFGS(\n",
@@ -188,7 +194,7 @@
     "    def optimizer_ADAM(self, lr=1e-5):\n",
     "        return torch.optim.Adam(self.approximate_solution.parameters(), lr=float(lr))\n",
     "\n",
-    "# Function to compute the total loss (weighted sum of spatial boundary loss, temporal boundary loss and interior loss)\n",
+    "    # Function to compute the total loss (weighted sum of spatial boundary loss, temporal boundary loss and interior loss)\n",
     "    def compute_loss(self, train_points):\n",
     "        (inp_train_sb_left, u_train_sb_left, inp_train_sb_right, u_train_sb_right,\n",
     "         inp_train_tb, u_train_tb, inp_train_int) = train_points\n",
@@ -331,6 +337,9 @@
     "\n",
     "        return history\n",
     "    ################################################################################################\n",
+    "    ###### Utility functions\n",
+    "    ################################################################################################\n",
+    "\n",
     "    def relative_L2_error(self, n_points=10000):\n",
     "        inputs = self.soboleng.draw(n_points)\n",
     "        inputs = self.convert(inputs)\n",
@@ -339,7 +348,7 @@
     "        exact_output = self.exact_solution(inputs).reshape(-1, )\n",
     "\n",
     "        err = (torch.mean((output - exact_output) ** 2) / torch.mean(exact_output ** 2)) ** 0.5\n",
-    "        # print in scientific notation the L2 norm i.e. 1.234 x 10^-2\n",
+    "\n",
     "        print('L2 Relative Error Norm: {:.6e}'.format(err.item()))\n",
     "        with open(f'{self.path}/relative_error.txt', 'a') as f:\n",
     "            f.write('L2 Relative Error Norm: {:.6e}\\n'.format(err.item()))\n",
