--- a/inverse_problem/equations/firn_pinn.ipynb
+++ b/inverse_problem/equations/firn_pinn.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import torch\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "from torch.utils.data import DataLoader\n",
@@ -28,7 +29,7 @@
    },
    "cell_type": "code",
    "source": [
-    "class HeatIPINN:\n",
+    "class FirnIPINN:\n",
     "    def __init__(self, n_int, n_sb, n_tb, n_meas, lambda_u=10, n_hidden_layers=4, neurons=20, lambda_m=10, n_hidden_layers_cf=4, neurons_cf=20, retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
     "\n",
     "        self.device = device\n",
@@ -52,7 +53,7 @@
     "        space_domain = [0, 1]\n",
     "        self.Te = time_domain[1]\n",
     "        self.zf = space_domain[1]\n",
-    "        self.domain_extrema = torch.tensor([time_domain, space_domain])\n",
+    "        self.domain = torch.tensor([time_domain, space_domain])\n",
     "\n",
     "        # Parameter to balance the role of data and PDE\n",
     "        self.lambda_u = lambda_u\n",
@@ -61,11 +62,11 @@
     "        self.lambda_m = lambda_m\n",
     "\n",
     "        # Generator of Sobol sequences\n",
-    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain_extrema.shape[0])\n",
+    "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain.shape[0])\n",
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
-    "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_solution = NeuralNet(input_dimension=self.domain.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
-    "        self.approximate_coefficient = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers_cf, neurons=neurons_cf, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_coefficient = NeuralNet(input_dimension=self.domain.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers_cf, neurons=neurons_cf, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        # Create directory to save plots\n",
@@ -76,8 +77,8 @@
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
-    "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
-    "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "        assert (tens.shape[1] == self.domain.shape[0])\n",
+    "        return tens * (self.domain[:, 1] - self.domain[:, 0]) + self.domain[:, 0]\n",
     "\n",
     "    def save_config(self, optimizer):\n",
     "        class_config = {\n",
@@ -144,10 +145,27 @@
     "        D_alpha = self.approximate_coefficient(inp_train_sb_right)\n",
     "        return self.ms(D_alpha*(grad_u_x/self.zf - self.M*u) - self.right_boundary_condition(inp_train_sb_right[:, 0]))\n",
     "\n",
+    "    def get_exact_solution(self, compare=False):\n",
+    "        path = r'/Users/omar/Desktop/Thesis/thesis_code/PINN/firn_exact_data.xlsx'\n",
+    "        data = pd.read_excel(path, header=None)\n",
+    "        x = data[0].values\n",
+    "        t = data[1].values\n",
+    "        inputs = torch.tensor(np.stack((t, x), axis=1), dtype=self.dtype, device=self.device)\n",
+    "\n",
+    "        exact_output = data[2].values.reshape(-1, )\n",
+    "        exact_output = torch.tensor(exact_output, dtype=self.dtype, device=self.device)\n",
+    "        if compare:\n",
+    "            return inputs, exact_output\n",
+    "        # self.n_meas is the % of how much data we want to use\n",
+    "        n_points = int(self.n_meas * len(exact_output))\n",
+    "        idx = np.random.choice(len(exact_output), n_points, replace=False)\n",
+    "        inputs = inputs[idx]\n",
+    "        exact_output = exact_output[idx]\n",
+    "        return inputs, exact_output\n",
     "    ###############################################################################################\n",
     "    # add points\n",
     "    def add_temporal_boundary_points(self):\n",
-    "        t0 = self.domain_extrema[0, 0]\n",
+    "        t0 = self.domain[0, 0]\n",
     "        input_tb = self.convert(self.soboleng.draw(self.n_tb))\n",
     "        input_tb = input_tb.to(self.dtype).to(self.device)\n",
     "        input_tb[:, 0] = torch.full(input_tb[:, 0].shape, t0)\n",
@@ -156,7 +174,7 @@
     "        return input_tb, output_tb\n",
     "\n",
     "    def add_spatial_boundary_points_left(self):\n",
-    "        x_left = self.domain_extrema[1, 0]\n",
+    "        x_left = self.domain[1, 0]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_left = torch.clone(input_sb)\n",
@@ -167,7 +185,7 @@
     "        return input_sb_left, output_sb_left\n",
     "\n",
     "    def add_spatial_boundary_points_right(self):\n",
-    "        x_right = self.domain_extrema[1, 1]\n",
+    "        x_right = self.domain[1, 1]\n",
     "        input_sb = self.convert(self.soboleng.draw(self.n_sb))\n",
     "        input_sb = input_sb.to(self.dtype).to(self.device)\n",
     "        input_sb_right = torch.clone(input_sb)\n",
@@ -190,12 +208,7 @@
     "\n",
     "    def get_measurement_data(self):\n",
     "        torch.random.manual_seed(42)\n",
-    "        t = torch.linspace(self.domain_extrema[0, 0], self.domain_extrema[0, 1], self.n_meas)\n",
-    "        x = torch.linspace(self.domain_extrema[1, 0], self.domain_extrema[1, 1], self.n_meas)\n",
-    "        input_meas = torch.cartesian_prod(t, x)\n",
-    "        input_meas = input_meas.to(self.dtype).to(self.device)\n",
-    "        output_meas = self.exact_solution(input_meas).reshape(-1,1)\n",
-    "        output_meas = output_meas.to(self.dtype).to(self.device)\n",
+    "        input_meas, output_meas = self.get_exact_solution()\n",
     "        return input_meas, output_meas\n",
     "\n",
     "    # Function returning the training sets S_sb, S_tb, S_int as dataloader\n",
@@ -393,10 +406,8 @@
     "        return history\n",
     "    ################################################################################################\n",
     "    def get_pde_points(self, n_points):\n",
-    "        inputs = self.soboleng.draw(n_points)\n",
-    "        inputs = self.convert(inputs)\n",
+    "        inputs, exact_output = self.get_exact_solution(compare=True)\n",
     "        output = self.approximate_solution(inputs).reshape(-1, )\n",
-    "        exact_output = self.exact_solution(inputs).reshape(-1, )\n",
     "        return inputs, output, exact_output\n",
     "\n",
     "    def get_coefficient_points(self, n_points):\n",
@@ -497,12 +508,12 @@
    "source": [
     "# Testing\n",
     "config = TrainingConfig(\n",
-    "    num_epochs=150,\n",
+    "    num_epochs=1,\n",
     "    early_stopping_patience=20,\n",
-    "    max_iter=100,\n",
+    "    max_iter=10,\n",
     "    lr=0.8\n",
     ")\n",
-    "pde = HeatIPINN(n_int=256, n_sb=64, n_tb=64, n_meas=40)"
+    "pde = FirnIPINN(n_int=256, n_sb=64, n_tb=64, n_meas=40)"
    ],
    "id": "44e2d19a72efba0d",
    "outputs": [],
